Don't try to report metrics when there's no URLRequest

This case can happen when UrlRequest.start() throws an exception.

BUG=675629
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2585203003
Cr-Commit-Position: refs/heads/master@{#439599}

Former-commit-id: c7432bd7c942317b23e365d0a816891ba3e5e63f